[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Modes/Encounter/Tactical/Map/TacticalMap/TacticalMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Modes/Encounter/Tactical/CanvasLayer.gd" type="Script" id=2]
[ext_resource path="res://src/Resources/Tilemaps/TilemapSpawn.res" type="TileSet" id=3]
[ext_resource path="res://src/Modes/Encounter/Tactical/TacticalScreen.gd" type="Script" id=4]
[ext_resource path="res://src/Modes/Encounter/Tactical/EncounterCamera.gd" type="Script" id=5]
[ext_resource path="res://src/Modes/Encounter/Tactical/HUD/TacticalHUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Modes/Encounter/Tactical/Map/LowerMap/GroundMap.gd" type="Script" id=7]
[ext_resource path="res://src/Resources/Tilemaps/TilemapObstacle.res" type="TileSet" id=8]
[ext_resource path="res://src/Modes/Encounter/Tactical/Map/GlobalMap.gd" type="Script" id=9]
[ext_resource path="res://src/Modes/Encounter/Tactical/Map/LowerMap/ObstacleMap.gd" type="Script" id=10]
[ext_resource path="res://src/Resources/Tilemaps/TilemapEncounter.tres" type="TileSet" id=11]

[node name="TacticalScreen" type="Node2D"]
script = ExtResource( 4 )

[node name="EncounterCamera" type="Camera2D" parent="."]
rotating = true
current = true
smoothing_enabled = true
smoothing_speed = 7.0
script = ExtResource( 5 )

[node name="CanvasLayer2" type="CanvasLayer" parent="EncounterCamera"]

[node name="TacticalHUD" parent="EncounterCamera/CanvasLayer2" instance=ExtResource( 6 )]

[node name="Bodies" type="Node2D" parent="."]

[node name="TacticalMap" parent="." instance=ExtResource( 1 )]
map = "/home/sha-256/Documents/Godot Projects/Stories of Shatterrock/assets/saved/maps/FinalDestination.map"

[node name="GroundMap" parent="TacticalMap" index="1"]
tile_set = ExtResource( 11 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0 )
script = ExtResource( 7 )

[node name="ObstacleMap" parent="TacticalMap" index="2"]
tile_set = ExtResource( 8 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 196610, 0, 0, 196611, 0, 0, 196615, 0, 0, 196616, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 524293, 0, 0 )
script = ExtResource( 10 )

[node name="SpawnMap" parent="TacticalMap" index="3"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65537, 0, 0, 458755, 0, 0 )
script = ExtResource( 9 )

[node name="DrawingBoard" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="ActionTimer" type="Timer" parent="."]
one_shot = true

[editable path="TacticalMap"]
